add ruby answer and remove c answer

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,6 @@ em {
   font-style: italic;
 }
 
-#answerSki, #answerRiver, #answerCanyon, #answerVegas, #answerBeach {
+#ruby, #react, #java {
   display: none;
 }
