finish setting up questions

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,6 @@
   background-size: 100%;
   background-position: center;
   background-repeat: no-repeat;
-  height: 300px;
   align-items: center;
   text-align: center;
   color: white;
@@ -16,6 +15,18 @@ em {
   font-style: italic;
 }
 
+.btn {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  color: black;
+}
+
+#questions {
+  color: white;
+  background-color: #687589;
+  border-left: 10px solid #687589;
+  border-right: 10px solid #687589;
+}
 #ruby, #react, #java {
   display: none;
 }
