--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,7 @@ em {
   margin-bottom: 10px;
   color: black;
   padding-bottom: 0px;
+  margin-left: 3%;
 }
 
 .panel-body {
@@ -38,6 +39,9 @@ em {
   padding-top: 0px;
 }
 
+.secondimage {
+  width: 100%;
+}
 #questions {
   color: white;
   background-color: #687589;
